[package]
name = "callipers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "*"
winapi = { version = "0.3", features = ["winuser","processthreadsapi","winbase","memoryapi","errhandlingapi","tlhelp32","psapi"] }

